[package]
name = "pos-chain"
version = "0.4.5"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
sha2 = "0.10"
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["fs", "cors"] }
ed25519-dalek = "2.1"
hex = "0.4"
bs58 = "0.5"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
